k3s/generated_manifests/moltis/Namespace-moltis.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: moltis
