k3s/generated_manifests/moltis/Deployment-moltis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moltis
  namespace: moltis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moltis
  template:
    metadata:
      labels:
        app: moltis
    spec:
      containers:
        - env:
            - name: DOCKER_TLS_CERTDIR
              value: ""
          image: docker:29-dind
          name: dind
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /var/lib/docker
              name: docker-graph
        - env:
            - name: DOCKER_HOST
              value: tcp://localhost:2375
          image: ghcr.io/moltis-org/moltis:latest
          name: moltis
          ports:
            - containerPort: 13131
              name: gateway
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - mountPath: /home/moltis/.config/moltis/moltis.toml
              name: config
              readOnly: true
              subPath: moltis.toml
            - mountPath: /home/moltis/.moltis
              name: data
      runtimeClassName: kata-clh
      volumes:
        - configMap:
            name: moltis-config
          name: config
        - name: data
          persistentVolumeClaim:
            claimName: moltis-data
        - emptyDir: {}
          name: docker-graph
