k3s/generated_manifests/moltis/Service-moltis-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: moltis.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab.boreal-scala.ts.net
  name: moltis-tailscale
  namespace: moltis
spec:
  clusterIP: None
  type: ClusterIP
