k3s/generated_manifests/moltis/IngressRoute-moltis.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: moltis
  namespace: moltis
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`moltis.doma.lol`)
      services:
        - name: moltis
          port: 13131
